--- a/ppm-war/pom.xml
+++ b/ppm-war/pom.xml
@@ -61,9 +61,19 @@
         <outputDirectory>target/${project.artifactId}-${project.version}/WEB-INF/classes</outputDirectory> 
                                    
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
+	        <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-compiler-plugin</artifactId>
+		        <configuration>
+			        <!-- or whatever version you use -->
+			        <source>1.7</source>
+			        <target>1.7</target>
+		        </configuration>
+	        </plugin>
+
+	        <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-war-plugin</artifactId>
                 <version>2.3</version>
                 <configuration>
                     <archiveClasses>true</archiveClasses>
