--- a/ppm-war/pom.xml
+++ b/ppm-war/pom.xml
@@ -41,6 +41,11 @@
 		    <artifactId>jersey-client</artifactId>
 		    <version>2.9</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>2.4.0</version>
+	    </dependency>
 
 	    <!-- Test Dependencies -->
         <dependency>
