--- a/ppm-war/pom.xml
+++ b/ppm-war/pom.xml
@@ -46,6 +46,11 @@
 			<artifactId>jackson-core</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.connectors</groupId>
+			<artifactId>jersey-apache-connector</artifactId>
+			<version>2.12</version>
+		</dependency>
 
 		<!-- Test Dependencies -->
 		<dependency>
